# Tumble-Code

./: .gitignore  .roomodes  CHANGELOG.md  CODE_OF_CONDUCT.md  COGNITIVE_COMPLEXITY_ANALYSIS.md  CONTRIBUTING.md  LICENSE  MEMORY_SYSTEM_ANALYSIS.md  PRIVACY.md  README.md  SECURITY.md  knip.json  package.json  pnpm-lock.yaml  self-host-cloud-backend-run.sh
self-hosted-cloudapi/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
self-hosted-cloudapi/alembic/: env.py  script.py.mako
self-hosted-cloudapi/alembic/versions/: a1b2c3d4e5f6_baseline.py  b2c3d4e5f6a7_datetime_timezone.py  c3d4e5f6a7b8_task_message_ts.py  d4e5f6a7b8c9_task_messages_unique_ts.py  e5f6a7b8c9d0_task_workspace_path.py
self-hosted-cloudapi/authentik/blueprints/: tumble-code.yaml
self-hosted-cloudapi/config/: __init__.py  auth.py  settings.py
self-hosted-cloudapi/config/marketplace/: mcps.yaml  modes.yaml
self-hosted-cloudapi/src/: __init__.py  database.py  db_bootstrap.py  dependencies.py  main.py
self-hosted-cloudapi/src/auth/: authentik.py  clerk_facade.py  jwt_issuer.py  static_token.py  web_session.py
self-hosted-cloudapi/src/middleware/: cors.py  rate_limit.py  request_logging.py
self-hosted-cloudapi/src/models/: __init__.py  base.py  event.py  oauth.py  organization.py  provider.py  settings.py  task.py  user.py
self-hosted-cloudapi/src/proxy/: __init__.py  openai_compat.py  router.py
self-hosted-cloudapi/src/realtime/: __init__.py  hub.py  sio.py
self-hosted-cloudapi/src/routers/: auth.py  browser.py  events.py  extension.py  marketplace.py  proxy.py  settings.py  web.py
self-hosted-cloudapi/src/schemas/: auth.py  marketplace.py  models.py  settings.py  share.py  telemetry.py  user.py
self-hosted-cloudapi/src/utils/: format.py
self-hosted-cloudapi/tests/: conftest.py  test_auth.py  test_back_channel_host.py  test_bridge.py  test_browser_auth.py  test_jwt_issuer.py  test_sign_in_flow.py  test_web_and_share.py
(+1006 files in other folders)
