[tool.poetry]
name = "roo-cloud-api"
version = "0.1.0"
description = "Self-hosted Roo Code Cloud API"
authors = ["Roo Code Community"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
httpx = "^0.28.0"
itsdangerous = "^2.2.0"
slowapi = "^0.1.9"
python-multipart = "^0.0.20"
pyyaml = "^6.0.2"
starlette = "^0.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"